fixed spacing and overflow errors

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
 html,body{
     background-color: black;
     height:100%;
-    display:flex;
-    justify-content: center;
     font-family:  Helvetica, Arial,sans-serif;
 
 }
@@ -11,49 +9,53 @@ html,body{
     height:1100px;
     width: 850px;
     position:relative;
-    /*margin-left:auto;
-    margin-right:auto;*/
+    margin-left:auto;
+    margin-right:auto;
+    padding-top: .5%;
 
 
 }
 .resume-header{
     background-color: rgb(242, 242, 242);
-    height:160px;
-    margin-top:40px;
-    margin-left:21px;
-    margin-right:21px;
+    height:15%;
+    margin-top:4.0%;
+    margin-left:2.5%;
+    margin-right:2.5%;
     display:flex;
     flex-direction: column;
     justify-content: center;
-    padding-left:80px;
+    padding-left:10%;
 
 }
 .header-name{
-    font-size:60px;
+    font-size:70px;
     font-family: 'Raleway', sans-serif;
-    letter-spacing: 4px;
+    letter-spacing: .06em;
 
 }
 .header-firstname{
     font-weight:500;
 }
 .header-lastname{
-    font-weight:bolder;
-    text-shadow: 3px 0 black;
+    font-weight:900;
+    text-shadow: 2px 0 black;
 }
 .header-role{
-    font-size:20px;
-    letter-spacing: 5px;
+    font-size:14px;
+    letter-spacing: .5em;
     font-family:'Lato',sans-serif;
     font-weight:100;
 }
 .header-text{
 }
 .linkedIn{
-    width: 150px;
+    width: 17%;
     position:absolute;
     border-radius: 50%;
-    top:90px;
-    right:70px;
+    top:9%;
+    right:11%;
 
+}
+.resume-body{
+    display: flex;
 }
